--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,12 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+
+    <color name="loginbutton">#000000</color>
+    <color name="color_tvresult">#ff0000</color>
+
+    <color name="loginPanel">#e0e0e3</color>
+    <color name="loginEdittext">#ffffff</color>
+    <color name="login_text_color">#ffffff</color>
+    <color name="loginButtonNormal">#FFC107</color>
 </resources>
