--- a/app/src/main/res/layout/progress_bar.xml
+++ b/app/src/main/res/layout/progress_bar.xml
@@ -8,7 +8,7 @@
     android:gravity="center"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-<com.uniyaz.demirbassayim.ui.components.CustomProgressBar
+<com.uniyaz.mobiltif.ui.components.CustomProgressBar
     android:id="@+id/progressBar"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
