--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,5 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="padding_field">5dp</dimen>
+    <dimen name="margin_top_demirbas">5dp</dimen>
 </resources>
