--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="?attr/colorPrimary"
-        app:title="@string/toolbar_title"
+        app:title="@string/toolbar_title_demirbas"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
 </com.google.android.material.appbar.AppBarLayout>
