--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -2,6 +2,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/menuFindByQrCode"
+        android:icon="@drawable/ic_logout"
+        android:onClick="onClickLogOut"
+        android:title="Çıkış Yap">
+    </item>
+    <item
         android:id="@+id/iconHamburger"
         android:icon="@drawable/ic_menu_hamburger"
         android:title=""
