--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    >
     <item
         android:id="@+id/menuFindByQrCode"
         android:icon="@drawable/ic_logout"
@@ -9,17 +10,10 @@
     </item>
     <item
         android:id="@+id/iconHamburger"
-        android:icon="@drawable/ic_menu_hamburger"
-        android:title=""
-        app:showAsAction="ifRoom|withText">
-        <menu>
+        android:icon="@drawable/ic_search"
+        android:onClick="onClickCallPopup"
+        app:showAsAction="ifRoom|withText"
+        android:title="Ara">
 
-
-            <item
-                android:id="@+id/menuItemQuit"
-                android:icon="@drawable/ic_logout"
-                android:onClick="onClickLogOut"
-                android:title="Çıkış Yap"></item>
-        </menu>
     </item>
 </menu>
