--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,133 +1,170 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/constraint"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:bind="http://schemas.android.com/tools">
 
-    <View
-        android:id="@+id/viewTop"
-        android:layout_width="0dp"
-        android:layout_height="310dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.6"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.45">
+    <data>
 
-    </View>
+        <variable
+            name="viewModel"
+            type="com.uniyaz.mobiltif.viewmodel.LoginViewModel" />
+        <variable
+            name="activity"
+            type="com.uniyaz.mobiltif.ui.activities.LoginActivity" />
+    </data>
 
-    <View
-        android:id="@+id/view"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="25dp"
-        android:background="@drawable/gradle_panel_l"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="@+id/viewTop"
-        app:layout_constraintEnd_toEndOf="@+id/viewTop"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/viewTop"
-        app:layout_constraintTop_toTopOf="@+id/viewTop"
-        app:layout_constraintVertical_bias="0.0"></View>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraint"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
+        <View
+            android:id="@+id/viewTop"
+            android:layout_width="0dp"
+            android:layout_height="310dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.6"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.45">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintTop_toTopOf="@+id/viewTop"
-        app:layout_constraintBottom_toBottomOf="@+id/viewTop"
-        app:layout_constraintEnd_toEndOf="@+id/view"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/view"
-        app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@mipmap/login_en_ust" />
+        </View>
+
+        <View
+            android:id="@+id/view"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginTop="25dp"
+            android:background="@drawable/gradle_panel_l"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="@+id/viewTop"
+            app:layout_constraintEnd_toEndOf="@+id/viewTop"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="@+id/viewTop"
+            app:layout_constraintTop_toTopOf="@+id/viewTop"
+            app:layout_constraintVertical_bias="0.0"></View>
 
 
-    <EditText
-        android:id="@+id/etUsername"
-        android:layout_width="0dp"
-        android:layout_height="45dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="70dp"
-        android:background="@drawable/custom_edittext"
-
-        android:drawableStart="@mipmap/account"
-        android:drawablePadding="5dp"
-        android:hint="@string/et_hint_username"
-        android:inputType="textAutoComplete"
-        app:layout_constraintEnd_toEndOf="@+id/imageView"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/imageView"
-        app:layout_constraintTop_toTopOf="@+id/imageView" />
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="@+id/viewTop"
+            app:layout_constraintEnd_toEndOf="@+id/view"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/view"
+            app:layout_constraintTop_toTopOf="@+id/viewTop"
+            app:layout_constraintVertical_bias="0.0"
+            app:srcCompat="@mipmap/login_en_ust" />
 
 
-    <EditText
-        android:id="@+id/etPassword"
-        android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="25dp"
-        android:background="@drawable/custom_edittext"
-        android:drawableStart="@mipmap/lock"
-        android:drawableLeft="@mipmap/lock"
-        android:drawablePadding="5dp"
-        android:hint="@string/et_hint_password"
-        android:inputType="textPassword"
-        android:text="1q24et"
-        app:layout_constraintEnd_toEndOf="@+id/etUsername"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/etUsername"
-        app:layout_constraintTop_toBottomOf="@+id/etUsername" />
+        <EditText
+            android:id="@+id/etUsername"
+            android:layout_width="0dp"
+            android:layout_height="45dp"
+            android:layout_marginStart="28dp"
+            android:layout_marginTop="70dp"
+            android:background="@drawable/custom_edittext"
+
+            android:drawableStart="@mipmap/account"
+            android:drawablePadding="5dp"
+            android:hint="@string/et_hint_username"
+            android:text="@={viewModel.username}"
+            android:inputType="textAutoComplete"
+            app:layout_constraintEnd_toEndOf="@+id/imageView"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/imageView"
+            app:layout_constraintTop_toTopOf="@+id/imageView" />
 
 
-    <Button
-        android:id="@+id/btnLogin"
-        android:layout_width="0dp"
-        android:layout_height="45dp"
-        android:layout_marginTop="25dp"
-        android:layout_marginBottom="8dp"
-        android:background="@drawable/custom_button_login"
-        android:text="@string/btn_login"
-        android:textAllCaps="false"
-        android:textColor="#ffffff"
-        app:layout_constraintBottom_toBottomOf="@+id/view"
-        app:layout_constraintEnd_toEndOf="@+id/etPassword"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/etPassword"
-        app:layout_constraintTop_toBottomOf="@+id/etPassword"
-        app:layout_constraintVertical_bias="0.0" />
+        <EditText
+            android:id="@+id/etPassword"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="25dp"
+            android:background="@drawable/custom_edittext"
+            android:drawableStart="@mipmap/lock"
+            android:drawableLeft="@mipmap/lock"
+            android:drawablePadding="5dp"
+            android:hint="@string/et_hint_password"
+            android:inputType="textPassword"
+            android:text="@={viewModel.password}"
+            app:layout_constraintEnd_toEndOf="@+id/etUsername"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="@+id/etUsername"
+            app:layout_constraintTop_toBottomOf="@+id/etUsername" />
 
-    <include
-        layout="@layout/progress_bar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toBottomOf="@+id/viewTop"
-        app:layout_constraintEnd_toEndOf="@+id/viewTop"
-        app:layout_constraintStart_toStartOf="@+id/viewTop"
-        app:layout_constraintTop_toTopOf="@+id/viewTop" />
 
-    <CheckBox
-        android:id="@+id/cbRememberMe"
+        <Button
+            android:id="@+id/btnLogin"
+            android:layout_width="0dp"
+            android:layout_height="45dp"
+            android:layout_marginTop="25dp"
+            android:layout_marginBottom="8dp"
+            android:background="@drawable/custom_button_login"
+            android:text="@string/btn_login"
+            android:textAllCaps="false"
+            android:textColor="#ffffff"
+            android:onClick="@{()->activity.onBtnLoginClicked()}"
+            app:layout_constraintBottom_toBottomOf="@+id/view"
+            app:layout_constraintEnd_toEndOf="@+id/etPassword"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/etPassword"
+            app:layout_constraintTop_toBottomOf="@+id/etPassword"
+            app:layout_constraintVertical_bias="0.0" />
 
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:backgroundTint="@color/login_text_color"
-        android:buttonTint="@color/colorAccent"
-        android:text="Beni Hatırla"
-        android:textColor="@color/colorAccent"
-        android:textSize="11sp"
-        app:layout_constraintStart_toStartOf="@+id/btnLogin"
-        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />
+        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/loadingPanel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintBottom_toBottomOf="@+id/viewTop"
+            app:layout_constraintEnd_toEndOf="@+id/viewTop"
+            app:layout_constraintStart_toStartOf="@+id/viewTop"
+            app:layout_constraintTop_toTopOf="@+id/viewTop">
+            <!--<com.uniyaz.mobiltif.ui.components.CustomProgressBar-->
+            <ProgressBar
+                android:id="@+id/progressBar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:indeterminate="false"
+                android:visibility="@{viewModel.progress}"
+                />
+        </RelativeLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <!--<include-->
+            <!--layout="@layout/progress_bar"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginStart="8dp"-->
+            <!--android:layout_marginTop="8dp"-->
+            <!--app:layout_constraintBottom_toBottomOf="@+id/viewTop"-->
+            <!--app:layout_constraintEnd_toEndOf="@+id/viewTop"-->
+            <!--app:layout_constraintStart_toStartOf="@+id/viewTop"-->
+            <!--app:layout_constraintTop_toTopOf="@+id/viewTop" />-->
+
+        <CheckBox
+            android:id="@+id/cbRememberMe"
+
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:backgroundTint="@color/login_text_color"
+            android:buttonTint="@color/colorAccent"
+            android:text="Beni Hatırla"
+            android:textColor="@color/colorAccent"
+            android:textSize="11sp"
+            android:checked="@={viewModel.checked}"
+            app:layout_constraintStart_toStartOf="@+id/btnLogin"
+            app:layout_constraintTop_toBottomOf="@+id/btnLogin" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
