Login işlemleri tarafında data bind işlemi yapıldı.

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     xmlns:bind="http://schemas.android.com/tools">
 
     <data>
-
+        <import type="android.view.View"/>
         <variable
             name="viewModel"
             type="com.uniyaz.mobiltif.viewmodel.LoginViewModel" />
@@ -135,7 +135,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:indeterminate="false"
-                android:visibility="@{viewModel.progress}"
+                android:visibility="@{viewModel.showProgressBar ? View.VISIBLE : View.GONE}"
                 />
         </RelativeLayout>
 
