--- a/app/src/main/res/layout/progress_bar.xml
+++ b/app/src/main/res/layout/progress_bar.xml
@@ -18,6 +18,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:indeterminate="false"
+            android:visibility="@{viewModel.showProgressBar ? View.VISIBLE : View.GONE}"
             />
     </RelativeLayout>
 </layout>
