--- a/app/src/main/res/layout/item_envanter_card.xml
+++ b/app/src/main/res/layout/item_envanter_card.xml
@@ -1,63 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/cardView"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="3dp"
+<layout>
 
-    android:layout_marginBottom="3dp"
-    android:background="@color/cardview_shadow_start_color">
+    <data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+        <variable
+            name="demirbas"
+            type="com.uniyaz.mobiltif.data.domain.Envanter" />
+    </data>
+
+    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/cardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorItemEnvanterCardBGround"
-        android:orientation="vertical">
+        android:layout_marginTop="3dp"
 
-        <RadioButton
-            android:id="@+id/radioButton"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginBottom="3dp"
+        android:background="@color/cardview_shadow_start_color">
 
-        <TextView
-            android:id="@+id/tvUst"
-            android:layout_width="0dp"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:text="TextView"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/radioButton"
-            app:layout_constraintTop_toTopOf="@+id/radioButton" />
+            android:background="@color/colorItemEnvanterCardBGround"
+            android:orientation="vertical">
 
-        <View
-            android:id="@+id/viewCizgi"
-            android:layout_width="0dp"
-            android:layout_height="2dp"
-            android:layout_marginTop="8dp"
-            android:background="@color/colorItemEnvanterCizgi"
-            app:layout_constraintEnd_toEndOf="@+id/tvUst"
-            app:layout_constraintStart_toStartOf="@+id/tvUst"
-            app:layout_constraintTop_toBottomOf="@+id/tvUst" />
+            <RadioButton
+                android:id="@+id/radioButton"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/tvAlt"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
-            android:text="TextView"
-            app:layout_constraintBottom_toBottomOf="@+id/radioButton"
-            app:layout_constraintEnd_toEndOf="@+id/viewCizgi"
-            app:layout_constraintStart_toStartOf="@+id/viewCizgi"
-            app:layout_constraintTop_toBottomOf="@+id/viewCizgi" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <TextView
+                android:id="@+id/tvUst"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:text="@{demirbas.idString + demirbas.tasinir + demirbas.faturaNo}"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/radioButton"
+                app:layout_constraintTop_toTopOf="@+id/radioButton" />
 
-</androidx.cardview.widget.CardView>
+            <View
+                android:id="@+id/viewCizgi"
+                android:layout_width="0dp"
+                android:layout_height="2dp"
+                android:layout_marginTop="8dp"
+                android:background="@color/colorItemEnvanterCizgi"
+                app:layout_constraintEnd_toEndOf="@+id/tvUst"
+                app:layout_constraintStart_toStartOf="@+id/tvUst"
+                app:layout_constraintTop_toBottomOf="@+id/tvUst" />
+
+            <TextView
+                android:id="@+id/tvAlt"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
+                android:text="@{demirbas.adi}"
+                app:layout_constraintBottom_toBottomOf="@+id/radioButton"
+                app:layout_constraintEnd_toEndOf="@+id/viewCizgi"
+                app:layout_constraintStart_toStartOf="@+id/viewCizgi"
+                app:layout_constraintTop_toBottomOf="@+id/viewCizgi" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.cardview.widget.CardView>
+</layout>
