--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,8 +11,8 @@
     <color name="loginEdittext">#ffffff</color>
     <color name="login_text_color">#ffffff</color>
     <color name="loginButtonNormal">#FFC107</color>
-    <color name="demirbarEdittext">#7e97af </color>
-    <color name="demirbarBackground">#0d3a64 </color>
+    <color name="demirbasEdittext">#7e97af </color>
+    <color name="demirbasBackground">#0d3a64 </color>
     
     <color name="colorItemEnvanterCardBGround">#ffffff</color>
     <color name="colorItemEnvanterCizgi">#000</color>
